force-app/main/default/objects/User/fields/ICRM_User_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Infor CRM User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>