force-app/main/default/objects/User/fields/Regional_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Regional_Vice_President__c</fullName>
    <description>RVP for account managers</description>
    <label>Regional Vice President</label>
    <relationshipName>RVP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>