force-app/main/default/objects/User/fields/Sage_Sperkey__c.field-meta.xml
<CustomField>
    <fullName>Sage_Sperkey__c</fullName>
    <description>Sperkey from the tarsalesperson table in Sage This is manually entered</description>
    <label>Sage Sperkey</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>