force-app/main/default/objects/User/fields/Sales_Operations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations__c</fullName>
    <label>Sales Operations</label>
    <relationshipName>Sales_Ops_rep</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>