force-app/main/default/objects/User/listViews/Account_Manager.listView-meta.xml
<ListView>
    <fullName>Account_Manager</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Account Manager</value>
    </filters>
    <label>Account Manager</label>
</ListView>