force-app/main/default/objects/User/listViews/Sales_Ops.listView-meta.xml
<ListView>
    <fullName>Sales_Ops</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Sales Operations</value>
    </filters>
    <label>Sales Ops</label>
    <sharedTo>
        <roleAndSubordinates>IT</roleAndSubordinates>
        <roleAndSubordinates>Sales_Leadership</roleAndSubordinates>
    </sharedTo>
</ListView>